migration to spring boot starter jpa and entity manager